Fix Pricing Item spacing

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -651,7 +651,7 @@ nav .logo {
   padding: 20px;
   gap: 20px;
   width: 225px;
-  height: 241px;
+  height: 303px;
   background-color: var(--white);
   border: 1px solid var(--white);
 }
